Added post about goaccess

--- a/posts/2021-01-25-goaccess.md
+++ b/posts/2021-01-25-goaccess.md
@@ -141,7 +141,7 @@ Now we update config file with `nano /etc/nginx/sites-available/stats.domain.com
 
 Your location portion the config file should now look like. You should add `auth_basic` and `auth_basic_user_file` lines to the file.
 
-```go
+```nginx
 location / {
   try_files $uri $uri/ =404;
   auth_basic "Private Property";
