Added post about goaccess

--- a/posts/2021-01-25-goaccess.md
+++ b/posts/2021-01-25-goaccess.md
@@ -99,14 +99,13 @@ To enable Geo location we also need one additiona thing.
 
 ```
 cd /var/www/html/stats.stats.com
-wget https://github.com/texnikru/GeoLite2-Database/raw/master/GeoLite2-City.mmdb.gz
-gunzip GeoLite2-City.mmdb.gz
+wget https://github.com/P3TERX/GeoLite.mmdb/raw/download/GeoLite2-City.mmdb
 ```
 
 Now we create a shell script that will be executed every 10 minutes.
 
 ```sh
-nano /var/www/html/stats.stats.com/generate-stats.sh
+nano /var/www/html/stats.domain.com/generate-stats.sh
 ```
 
 Contents of this file should look like this.
