Fixed dates in RSS

--- a/posts/2021-01-25-goaccess.md
+++ b/posts/2021-01-25-goaccess.md
@@ -3,7 +3,7 @@ Title: Using GoAccess with Nginx to replace Google Analytics
 Description: Using GoAccess with Nginx to replace Google Analytics
 Slug: using-goaccess-with-nginx-to-replace-google-analytics
 Listing: true
-Created: 2021, January 25
+Created: 2021-01-25
 Tags: []
 ---
 
