Adde TOC to a bunch of posts

--- a/content/posts/2021-01-25-goaccess.md
+++ b/content/posts/2021-01-25-goaccess.md
@@ -7,10 +7,13 @@ draft: false
 
 **Table of contents**
 
-1. [Opting for log parsing](#opting-for-log-parsing)
-2. [Getting Nginx ready](#getting-nginx-ready)
-3. [Getting GoAccess ready](#getting-goaccess-ready)
-4. [Securing with Basic authentication](#securing-with-basic-authentication)
+1. [Introduction](#introduction)
+2. [Opting for log parsing](#opting-for-log-parsing)
+3. [Getting Nginx ready](#getting-nginx-ready)
+4. [Getting GoAccess ready](#getting-goaccess-ready)
+5. [Securing with Basic authentication](#securing-with-basic-authentication)
+
+## Introduction
 
 I know! You cannot simply replace Google Analytics with parsing access logs and displaying a couple of charts. But to be honest, I actually never used Google Analytics to the fullest extent and was usually interested in seeing page hits and which pages were visited most often.
 
