--- a/content/posts/2021-01-25-goaccess.md
+++ b/content/posts/2021-01-25-goaccess.md
@@ -42,10 +42,12 @@ all the functionalities I need, and it's a single binary. Written in Go.
 GoAccess can be used in two different modes.
 
 ![GoAccess Terminal](/posts/goaccess/goaccess-dash-term.png)
-<center><i>Running in a terminal</i></center>
+
+*Running in a terminal*
 
 ![GoAccess HTML](/posts/goaccess/goaccess-dash-html.png)
-<center><i>Running in a browser</i></center>
+
+*Running in a browser*
 
 I, however, need this to run in a browser. So, the second option is the way to
 go. The Idea is to periodically run cronjob and export this report into a folder
@@ -69,7 +71,7 @@ apt update && apt upgrade -y
 apt install nginx certbot python3-certbot-nginx apache2-utils
 ```
 
-After all this is installed we can create a new configuration for a statistics. 
+After all this is installed we can create a new configuration for a statistics.
 Stats will be available at `stats.domain.com`.
 
 ```sh
@@ -200,4 +202,3 @@ and password. If not, try reopening your browser.
 
 That is all. You now have analytics for your server that gets refreshed every 10
 minutes.
-
