Added lazy loading to images

--- a/_posts/2021-01-25-goaccess.md
+++ b/_posts/2021-01-25-goaccess.md
@@ -42,11 +42,11 @@ all the functionalities I need, and it's a single binary. Written in Go.
 
 GoAccess can be used in two different modes.
 
-![GoAccess Terminal](/assets/posts/goaccess/goaccess-dash-term.png)
+![GoAccess Terminal](/assets/posts/goaccess/goaccess-dash-term.png){:loading="lazy"}
 
 *Running in a terminal*
 
-![GoAccess HTML](/assets/posts/goaccess/goaccess-dash-html.png)
+![GoAccess HTML](/assets/posts/goaccess/goaccess-dash-html.png){:loading="lazy"}
 
 *Running in a browser*
 
