Added exclusion of draft posts from list

--- a/_posts/2024-02-11-k-mer.md
+++ b/_posts/2024-02-11-k-mer.md
@@ -125,6 +125,7 @@ optimized for efficiency and scalability.
 Now that we have the basics out of the way we can start implementing basic k-mer
 counter in C.
 
+## Implementing sequence reading in C
 
 ## Additional reading material
 
