New post: Integrated debugging in Vim

--- a/content/posts/2026-01-09-vim.md
+++ b/content/posts/2026-01-09-vim.md
@@ -194,7 +194,7 @@ works really well for projects using C, but anything goes here.
 ## Why use `:term` and `:TermDebug`
 
 It's very easy to yank and paste from internal terminal buffers even if you are
-not using `tmux` as multiplexer. Just makes the whole thing much easier. I don
+not using `tmux` as multiplexer. Just makes the whole thing much easier. I do
 however use `tmux` as well but for compile/debug loop this proved to be a much
 better experience.
 
