Update post: Integrated debugging in Vim

--- a/content/posts/2026-01-09-vim.md
+++ b/content/posts/2026-01-09-vim.md
@@ -141,7 +141,6 @@ function! LocalDebugMain() abort
 		call TermDebugSendCommand(printf('set env %s %s', k, v))
 	endfor
 
-	call TermDebugSendCommand('directory ' . getcwd())
 	call TermDebugSendCommand('break main')
 	call TermDebugSendCommand('run')
 endfunction
@@ -176,8 +175,9 @@ endfunction
 ```
 
 > **Note**: If any errors are found during the compilation mode the Quickfix
-> list will be populated and opened. You could CtrlP Quickfix for this as well,
-> I just want to stick to what Vim supports natively.
+> list will be populated and opened. You could use CtrlP Quickfix with
+> `:CtrlPQuickfix` instead of `:copen` for this as well, I just want to stick
+> to what Vim supports natively.
 
 Lets check these keybindings.
 
