Update post: Integrated debugging in Vim

--- a/content/posts/2026-01-09-vim.md
+++ b/content/posts/2026-01-09-vim.md
@@ -200,3 +200,18 @@ better experience.
 makes adding new breakpoints with `:Break` just seamless. This goes for all
 other commands as well. You can read more about other commands with `:h
 Termdebug` or on https://vimhelp.org/terminal.txt.html.
+
+## Isn't this setup a bit elaborate?
+
+Yes and no. I don't change these files much at all. When I start a new C
+project I just copy the existing one and call it a day. And any significantly
+complex project will require certain per project specific configurations
+anyway.
+
+This also makes it shareable with other people without dumping your whole setup
+on them. There are drawback like with anything else, but I have found this
+approach to be the lesser of two evils kinda think. Even Vim users can ignore
+these files by not enabling local configuration files.
+
+Like any other tool, it's on you to make your development workflow as
+frictionless as possible and no tool is perfect.
