Update post: Integrated debugging in Vim

--- a/content/posts/2026-01-09-vim.md
+++ b/content/posts/2026-01-09-vim.md
@@ -204,9 +204,9 @@ Termdebug` or on https://vimhelp.org/terminal.txt.html.
 ## Isn't this setup a bit elaborate?
 
 Yes and no. I don't change these files much at all. When I start a new C
-project I just copy the existing one and call it a day. And any significantly
-complex project will require certain per project specific configurations
-anyway.
+project I just copy an existing one from a different project to my new one and
+call it a day.  And any significantly complex project will require certain per
+project specific configurations anyway.
 
 This also makes it shareable with other people without dumping your whole setup
 on them. There are drawback like with anything else, but I have found this
